--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     <audio src="00.mp3" controls preload></audio>
+    <button id="playButton">再生</button>
+    <button id="pauseButton">一時停止</button>
+    <button id="skipButton">10秒スキップ</button>
+    <button id="backButton">10秒巻き戻し</button>
+    <input id="volumeControl" type="range" min="0" max="100" step="5">
+    <input id="timeupdate" type="range" min="0" id="seekBar">
     <script src="app.js"></script>
   </body>
 </html>
